--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://abdelwahabyoussef.github.io/portfolio-app/",
+  "homepage": "https://abdelwahab-hamada.github.io/portfolio/",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
